# outguess

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac  flake.nix
man/: create-man.sh
scripts/: nix-build.sh
src/: Makefile.am  arc.c  err.c  fourier.c  golay.c  histogram.c  iterator.c  jpg.c  jpg.h  md5.c  outguess.c  pnm.c  pnm.h
src/jpeg-6b-steg/: jmorecfg.h  jpeglib.h
tests/: Makefile.am  cross_backend_jpg.sh  embed_extract_jpg.sh  embed_extract_jpg_pipe.sh  embed_extract_pnm.sh  embed_extract_ppm.sh  test_seek.sh
