TESTS = embed_extract_jpg.sh \
        embed_extract_jpg_pipe.sh \
        embed_extract_pnm.sh \
        embed_extract_ppm.sh \
        cross_backend_jpg.sh \
        test_seek.sh

CLEANFILES =  test-with-message.jpg \
              test-with-message.pnm \
              test-with-message.ppm

distclean-local:
	rm -f out.jpg
